[gd_scene load_steps=8 format=3 uid="uid://2cs02ipd30sh"]

[ext_resource type="Script" path="res://content/entities/ship/ship.gd" id="1_75lbg"]
[ext_resource type="PackedScene" uid="uid://clydoun60iql" path="res://content/weapons/blasters/blasters.tscn" id="2_ejf7b"]
[ext_resource type="PackedScene" uid="uid://c5xxfcf4yrqqj" path="res://base_components/tank_movement_controller/tank_movement_controller.tscn" id="3_fsggd"]
[ext_resource type="PackedScene" uid="uid://dy3hoscn5tnmm" path="res://content/entities/ship/trail/trail.tscn" id="4_3ebd3"]
[ext_resource type="PackedScene" uid="uid://b3sleru8ecrea" path="res://base_components/vacuum/vacuum.tscn" id="5_mj6ir"]
[ext_resource type="PackedScene" uid="uid://b31ln3jkmbjjd" path="res://base_components/vehicle_seat/vehicle_seat.tscn" id="6_4th6r"]
[ext_resource type="Texture2D" uid="uid://bsivagbf4f1jm" path="res://assets/art/entities/player_ship/player_ship.svg" id="7_tm0fu"]

[node name="Ship" type="CharacterBody2D"]
collision_layer = 9
script = ExtResource("1_75lbg")

[node name="Blasters" parent="." instance=ExtResource("2_ejf7b")]
position = Vector2(0, -118)

[node name="Thrusters" parent="." instance=ExtResource("3_fsggd")]
position = Vector2(0, 120)
reverse_behavior = 1

[node name="LeftTrail" parent="Thrusters" instance=ExtResource("4_3ebd3")]
position = Vector2(-40, -3)

[node name="RightTrail" parent="Thrusters" instance=ExtResource("4_3ebd3")]
position = Vector2(40, -3)

[node name="PickupVacuum" parent="." instance=ExtResource("5_mj6ir")]
collision_mask = 4

[node name="VehicleSeat" parent="." instance=ExtResource("6_4th6r")]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("7_tm0fu")

[node name="CollisionPolygon" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(0, 4)
polygon = PackedVector2Array(102, 16, 101, -23, -18, -114, -80, -114, -79, -6, -81, 106, -16, 104)

[connection signal="node_reached_center" from="PickupVacuum" to="." method="_on_pickup_vacuum_node_reached_center"]
[connection signal="driver_evicted" from="VehicleSeat" to="." method="_on_vehicle_seat_driver_evicted"]
[connection signal="new_driver_entered" from="VehicleSeat" to="." method="_on_vehicle_seat_new_driver_entered"]
